--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,1 +1,9 @@
-add_executable(_test test.cpp)
+set(UNIT_TESTS unit_tests)
+add_executable(${UNIT_TESTS} testLastIndexOf.cpp)
+target_link_libraries(
+    ${UNIT_TESTS}
+    PRIVATE ${CUSER}
+    PRIVATE GTest::GTest
+    PRIVATE GTest::Main)
+
+add_test(UNIT_TESTS ${UNIT_TESTS})
