Implement read/write methods in serializer * Add IOStreamSerializer

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,11 +3,16 @@ add_executable(
     ${UNIT_TESTS}
     testLastIndexOf.cpp
     testHasStreamOperators.cpp
+
+    testIOStreamSerializer.cpp
 )
 target_link_libraries(
     ${UNIT_TESTS}
     PRIVATE ${CUSER}
     PRIVATE GTest::GTest
     PRIVATE GTest::Main)
+target_include_directories(
+    ${UNIT_TESTS}
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_test(UNIT_TESTS ${UNIT_TESTS})
