Add array serializer

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,8 @@ add_executable(
     testFloatSerializer.cpp
     testBoolSerializer.cpp
     testIntegerSerializer.cpp
+
+    testArraySerializer.cpp
 )
 target_link_libraries(
     ${UNIT_TESTS}
