Add std::vector serializer

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(
 
     testArraySerializer.cpp
     testMapSerializer.cpp
+    testVectorSerializer.cpp
 )
 target_link_libraries(
     ${UNIT_TESTS}
