Add default serializer Simplify IsVector and IsMap traits

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(
     testArraySerializer.cpp
     testMapSerializer.cpp
     testVectorSerializer.cpp
+
+    testDefaultSerializer.cpp
 )
 target_link_libraries(
     ${UNIT_TESTS}
