Add dom specializtion for nlohmann json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,15 @@
 cmake_minimum_required(VERSION 3.5.2)
 
+option(BUILD_WITH_NLOHMANN_JSON OFF)
+
 set(CUSER cuser)
 project(${CUSER})
 
 set (CMAKE_CXX_STANDARD 11)
+
+if (BUILD_WITH_NLOHMANN_JSON)
+    find_package(nlohmann_json REQUIRED)
+endif()
 
 add_library(${CUSER} INTERFACE)
 target_include_directories(
