--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,4 +24,16 @@ target_include_directories(
     ${UNIT_TESTS}
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
+if (BUILD_WITH_NLOHMANN_JSON)
+    target_sources(
+        ${UNIT_TESTS}
+        PUBLIC testNlohmannJson.cpp
+    )
+    target_link_libraries(
+        ${UNIT_TESTS}
+        PRIVATE nlohmann_json
+    )
+endif()
+
+
 add_test(UNIT_TESTS ${UNIT_TESTS})
